--- a/infrastructure/package.json
+++ b/infrastructure/package.json
@@ -20,6 +20,7 @@
     "typescript": "~4.9.5"
   },
   "dependencies": {
+    "@aws-sdk/client-lambda": "^3.883.0",
     "@aws-sdk/client-ssm": "^3.883.0",
     "@octokit/rest": "^22.0.0",
     "aws-cdk-lib": "2.70.0",
