Production cleanup: Remove judge components, secure credentials, ready for public release
- Remove judge/competition components and references
- Clean documentation of competition-specific language
- Secure .env.local and CDK outputs from repository
- Verify demo mode functionality for public users
- Update admin scripts for production test accounts
- Exclude .kiro development artifacts from repo
- All security vulnerabilities resolved
- Platform ready for production deployment

--- a/.gitignore
+++ b/.gitignore
@@ -90,3 +90,8 @@ infrastructure/*.d.ts
 
 # DynamoDB Local files
 .dynamodb/
+
+# Development artifacts (keep local, exclude from repo)
+.kiro/# CDK build outputs (SECURITY: Contains infrastructure templates and account IDs)
+infrastructure/cdk.out/
+infrastructure/dist/
